syntax = "proto3";

package arx;

// Interface exported by the server.
service arx {
  //
  // Creates a new key
  //
  rpc CreateKey(CreateKeyRequest) returns (KeyMetadata) {}
  //
  // Stream a list of keys back to the client
  //
  rpc ListKeys(ListKeysRequest) returns (stream KeyMetadata) {}
}

// KeyMetadata is a representation of an Encryption Key
message KeyMetadata {
  string KeyID = 1;
  string CreationDate_RFC3339Nano = 2;
  string Description = 3;
  bool Enabled = 4;
}

// CreateKeyRequest will create a key
message CreateKeyRequest {
  string Description = 1;
}

message ListKeysRequest {}  